# real_time_transcriber

./: CMakeLists.txt  README.md  onnx_read.cpp  packages.config  translator-onnx.sln  translator-onnx.vcxproj  translator-onnx.vcxproj.filters  utils.cpp  utils.h
src/: main.cpp  models.cpp  models.h  recorder.cpp  recorder.h  utils.cpp  utils.h  whisper_process.cpp  whisper_process.h
transformer_onnx/tokenize_tool/: readme.txt
voc/: demo.txt
whisper_onnx/processor/: tokenizer_config.json
whisper_onnx/scripts/: decode_script.txt  process_script.py  process_script.txt
